--- a/resorces/CSS/style.css
+++ b/resorces/CSS/style.css
@@ -1,13 +1,156 @@
-nav{
-    display: block;
+*{
+  background-color: #f2f2f2;
+}
+
+
+body {
+  text-align: center;
+}
+
+div .nav{
+  margin-top: 30px;
+    
+    width: 100%;
     text-decoration: none;
+}
+
+h1 {
+  font-size: 72px;
+  background: -webkit-linear-gradient(rgb(234, 30, 179), rgb(48, 209, 199));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+li{
+  height: 40px;
+  width: 40px;
+    display: inline;
+    text-transform: uppercase;
+    color: rgb(255, 0, 179);
+    font-size: 15px;
+    margin: 30px;
+    padding: 10px;
+    background-color: #f2f2f2;
+    border: none;
+    border-radius: 50%;
+    background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
+    box-shadow:  19px 19px 40px #d0cece,
+                -19px -19px 40px #ffffff;
+}
+  
+
+
+a:hover {
+  color: rgb(187, 15, 255);
+}
+
+header{
+  position: fixed;
+  top: 60px;
+  left: 0;
+  right: 0;
 }
 
 a{
-    text-decoration: none;
-color: aqua;
+  text-decoration: none;
+  color: rgb(255, 0, 179);
 }
 
-a:hover {
-  color: rgb(158, 0, 32);
+.container{
+  color:  rgb(255, 0, 179) ;
+  width: 500px;
+  height: 190px;
+  border-radius:6%;
+  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
+  box-shadow:  19px 19px 40px #d0cece,
+              -19px -19px 40px #ffffff;
+  border: none;
+  padding: 1.5em 1.9em;
+  text-align: center;
+  margin-bottom: 70px;
+  margin-right: auto;
+ margin-left: auto;
+ margin-top: 200px;
 }
+
+
+h5{
+  font-size: 10;
+}
+
+.footlinks li{
+  text-transform: uppercase;
+  height: 25px;
+  width: 25px;
+  color: rgb(255, 0, 179);
+ font-size: 15px;
+  margin:20px;
+  padding:20px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 20%;
+  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
+  box-shadow:  19px 19px 40px #d0cece,
+              -19px -19px 40px #ffffff;
+}
+/*
+a {
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  color: rgb(255, 0, 179);
+  font-size: 10px;
+  padding: 30px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 20%;
+  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
+  box-shadow:  19px 19px 40px #d0cece,
+              -19px -19px 40px #ffffff;
+}
+
+
+footer li {
+ 
+  display: inline-block;
+  
+  height: 10px;
+  width: 10px;
+  margin: 15px;
+  text-transform: uppercase;
+  font-size: 8px;
+  padding: 40px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 20%;
+  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
+  box-shadow:  10px 10px 30px #d0cece,
+              -19px -19px 40px #ffffff;
+}
+
+.footlinks{
+  width: 100%;
+  color: rgb(255, 0, 179);
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 20px;
+  padding-top: 40px;
+}
+
+
+.container{
+  display: block;
+  width: 500px;
+  height: 160px;
+  border-radius:6%;
+  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
+  box-shadow:  19px 19px 40px #d0cece,
+              -19px -19px 40px #ffffff;
+  border: none;
+  padding: 1em 1.2em;
+  text-align: center;
+  margin-bottom: 70px;
+  margin-right: auto;
+ margin-left: auto;
+}
+
