--- a/resorces/CSS/style.css
+++ b/resorces/CSS/style.css
@@ -88,6 +88,87 @@ hr{
  
 }
 
+.wrapper{
+  width: 40%;
+  height: 30px;
+  min-width: 0px;
+  position: relative;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+}
+.line{
+  width: 100%;
+  padding: 30px 30px 50px;
+  background: linear-gradient(145deg, #ffffff, #f3f3f3);
+  border-radius: 50px;
+  box-shadow: 0 20px 30px rgba(0,0,0,0.2);
+} 
+
+.line h2{
+  color:rgb(234, 30, 179) ;
+  margin-bottom: 50px;
+  letter-spacing: 2px;
+  text-align: center;
+  font-size: 33px;
+  font-weight: bold;
+}
+
+
+.details{
+  width: 100%;
+  display: flex;  
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.bar{
+  position: relative;
+  border:none;
+  border-radius: 50px;
+  background: linear-gradient(145deg, #ffffff, #f3f3f3);
+  box-shadow:  19px 19px 40px #d0cece,
+              -19px -19px 40px #ffffff;
+}
+
+.bar div{
+  position: relative;
+  width: 0;
+  height: 9px;
+  border-radius: 10px;
+  background-color: #bc14ff;
+
+
+}
+
+.skills:not(:last-child){
+  margin-bottom: 30px;
+}
+
+#html-bar{
+  animation: html-fill 2s forwards;
+}
+@keyframes html-fill{
+  100%{
+      width: 90%;
+  }
+}
+
+#css-bar{
+  animation: css-fill 2s forwards;
+}
+@keyframes css-fill{
+  100%{
+      width: 75%;
+  }
+}
+#javascript-bar{
+  animation: js-fill 2s forwards;
+}
+@keyframes js-fill {
+  100%{
+      width: 72%;
+  }
+}
 
 .footlinks li{
   text-transform: uppercase;
