--- a/resorces/CSS/style.css
+++ b/resorces/CSS/style.css
@@ -1,11 +1,24 @@
+ /* Site Stylesheet
+  1. Global Styles
+  2. Typography Styles
+  3. Structure Styles
+  4. Module Styles
+  5. Component Styles
+======================================== */
+
 *{
   box-sizing: border-box;
 }
 
 
 body {
+  display: flex;
   text-align: center;
   font-family: 'Roboto Mono', monospace;
+  height: 100vh;
+  flex-direction: column;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 
@@ -23,6 +36,7 @@ h2{
 }
 
 .nav{
+  
   position: absolute;
   top: 8%;
   left: 50%;
@@ -31,6 +45,7 @@ h2{
 }
 
 ul li{
+  
   display: inline;
   text-align: center;
 }
@@ -51,8 +66,8 @@ a:visited{
 
 hr{
   height: 80px;
-  width:33.33333%;
-  margin: -82px 0;
+  width:50%;
+  margin: -82px 7%;
   border: none;
   border-radius: 50px;
   transition: .3s ease-in-out;
@@ -63,11 +78,11 @@ hr{
 }
 
 .two:hover ~ hr{
-  margin-left: 33% ;
+  margin-left: 50% ;
 }
 
 .three:hover ~ hr{
-  margin-left: 66.6666%;
+  margin-left: 100%;
 }
 
 .mainblock{
@@ -76,7 +91,7 @@ hr{
 
 .wrapper{
   flex: 1;
-  margin-left: 30px;
+  margin-left: 100px;
   margin-bottom: 70px;
   margin-top: 200px;
   height: 400px;
@@ -96,8 +111,8 @@ hr{
   padding: 1.5em 1.9em;
   margin-bottom: 70px;
   margin-top: 200px;
-  margin-left: 50px;
-  margin-right: 30px;
+  margin-left: 100px;
+  margin-right: 50px;
 }
 
 
@@ -111,7 +126,7 @@ hr{
 } 
 
  
-.line h2{
+.line h1{
   color:rgb(234, 30, 179) ;
   margin-bottom: 50px;
   letter-spacing: 2px;
@@ -128,12 +143,13 @@ hr{
   justify-content: space-between;
   margin-bottom: 10px;
 }
+
 .bar{
   position: relative;
   border:none;
   border-radius: 50px;
-  background: linear-gradient(145deg, #ffffff, #f3f3f3);
-  box-shadow:  19px 19px 40px #d0cece,
+  background: linear-gradient(145deg, #ffffff, #e5e3e3);
+  box-shadow:  19px 19px 40px #b6b4b4,
               -19px -19px 40px #ffffff;
 }
 
@@ -142,7 +158,7 @@ hr{
   width: 0;
   height: 9px;
   border-radius: 10px;
-  background-color: #bc14ff;
+  background-color:rgb(28, 89, 255);
 
 
 }
