--- a/resorces/CSS/style.css
+++ b/resorces/CSS/style.css
@@ -41,6 +41,7 @@ h2{
   left: 50%;
   transform: translate(-50%, -50%);
   width: 60%;
+  margin-bottom: 30px;
 }
 
 ul li{
@@ -101,7 +102,7 @@ hr{
   flex: 1;
   margin-left: 100px;
   margin-bottom: 70px;
-  margin-top: 200px;
+  margin-top: 250px;
   height: 400px;
 }
 
@@ -118,7 +119,7 @@ hr{
   border: none;
   padding: 1.5em 1.9em;
   margin-bottom: 70px;
-  margin-top: 200px;
+  margin-top: 250px;
   margin-left: 100px;
   margin-right: 50px;
   overflow: scroll;
