--- a/resorces/CSS/style.css
+++ b/resorces/CSS/style.css
@@ -256,108 +256,9 @@ p{
 }
 
 
-/*
-li{
-  display: inline;
-  box-sizing: border-box;
-  text-transform: uppercase;
-  color: rgb(255, 0, 179);
-  font-size: 20px;
-  font-weight:600;
-  margin: 20px;
-  padding: 20px;
-  background-color: #f2f2f2;
-  border: none;
-  border-radius: 50%;
-  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
-  box-shadow:  19px 19px 40px #abaaaa,
-              -19px -19px 40px #ffffff;            
-}
-
-
-
-a:hover {
-  color: rgb(187, 15, 255);
-}
-
-header{
-  position: fixed;
-  top: 60px;
-  left: 0;
-  right: 0;
-}
-
-a{
-  text-decoration: none;
-  color: rgb(255, 0, 179);
-}
-
-
-
-
-h5{
-  font-size: 10;
-}
-
-
-/*
-a {
-  height: 10px;
-  width: 10px;
-  display: inline-block;
-  color: rgb(255, 0, 179);
-  font-size: 10px;
-  padding: 30px;
-  background-color: #f2f2f2;
-  border: none;
-  border-radius: 20%;
-  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
-  box-shadow:  19px 19px 40px #d0cece,
-              -19px -19px 40px #ffffff;
-}
-
-
-footer li {
- 
-  display: inline-block;
+@media only screen and (max-width: 480px) {
+  #welcome {
+    overflow: hidden;
+  }
   
-  height: 10px;
-  width: 10px;
-  margin: 15px;
-  text-transform: uppercase;
-  font-size: 8px;
-  padding: 40px;
-  background-color: #f2f2f2;
-  border: none;
-  border-radius: 20%;
-  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
-  box-shadow:  10px 10px 30px #d0cece,
-              -19px -19px 40px #ffffff;
 }
-
-.footlinks{
-  width: 100%;
-  color: rgb(255, 0, 179);
-  text-transform: uppercase;
-  text-align: center;
-  margin-top: 20px;
-  padding-top: 40px;
-}
-
-
-.container{
-  display: block;
-  width: 500px;
-  height: 160px;
-  border-radius:6%;
-  background: linear-gradient(145deg, #f0f0f0, #f3f3f3);
-  box-shadow:  19px 19px 40px #d0cece,
-              -19px -19px 40px #ffffff;
-  border: none;
-  padding: 1em 1.2em;
-  text-align: center;
-  margin-bottom: 70px;
-  margin-right: auto;
- margin-left: auto;
-}
-
